# ammcp

./: LICENSE  README.md  pyproject.toml
ammcp/: exceptions.py  models.py  music_control.py  server.py
tests/: conftest.py  test_music_control.py  test_server.py
