[project]
name = "ammcp"
authors = [{name = "Matt Hallowell"}]
version = "0.1.0"
description = "MCP server for controlling Apple Music on macOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
ammcp = "ammcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
